small adjustments to fix text alignment

--- a/src/molecules/SubscriptionAccordion/SubscriptionAccordion.pcss
+++ b/src/molecules/SubscriptionAccordion/SubscriptionAccordion.pcss
@@ -48,6 +48,7 @@
   }
   &__heading-wrapper {
     display: flex;
+    flex-basis: 9rem;
   }
 
   &__heading {
